<resources>
    <string name="app_name">SinusScan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="question_thick_nasal_discharge">Do you have thick nasal discharge that is yellow or green?</string>
    <string name="include_nasal_photo">Include a photo of your nasal discharge</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="question_nasal_flow_last_days">How have you felt the flow of nasal discharge from your nose in the last few days?</string>
    <string name="instructions_select_number">(Select one number from 1 to 5 that best matches your condition)</string>
    <string name="r1_option">No nasal discharge at all</string>
    <string name="r2_option">A little discharge, but not flowing out</string>
    <string name="r3_option">Discharge flows lightly forward (nose)</string>
    <string name="r4_option">Discharge flows quite a lot forward or to the back of the throat (post-nasal drip)</string>
    <string name="r5_option">Discharge flows very much and continuously, feels disturbing (both forward and backward)</string>
    <string name="likert_label_1">No nasal discharge at all</string>
    <string name="likert_label_2">A little nasal discharge, but not flowing out</string>
    <string name="likert_label_3">Nasal discharge flows lightly forward</string>
    <string name="likert_label_4">Nasal discharge flows quite a lot forward or down the throat (post-nasal drip)</string>
    <string name="likert_label_5">Nasal discharge flows very much and continuously, feels disturbing (forward or backward)</string>
    <string name="back_button">Back Button</string>
    <string name="question_number_3">3.</string>
    <string name="question_face_pain">Do you feel pain or pressure on your face?</string>
    <string name="instruction_face_pain">(select 1 if there are no symptoms at all and 5 if the pain is severe)</string>
    <string name="error_select_answer">Please select an answer!</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="question_number_4">4.</string>
    <string name="question_high_fever">Have you experienced a high fever recently?</string>
    <string name="instruction_high_fever">(choose 1 if there is no fever at all and 5 if the fever is higher than 39°C)</string>
    <string name="question_number_5">5.</string>
    <string name="question_nasal_congestion">Do you experience nasal congestion or a feeling of fullness in your nose?</string>
    <string name="instruction_nasal_congestion">(select 1 if there is no difficulty at all and 5 if the nasal congestion or fullness is very severe)</string>
    <string name="question_number_6">6.</string>
    <string name="question_duration">How long have your symptoms lasted?</string>

    <string name="option_no_symptoms">No symptoms at all</string>
    <string name="option_less_than_3_days">Less than 3 days</string>
    <string name="option_3_to_5_days">Between 3–5 days</string>
    <string name="option_5_to_10_days">Between 5–10 days</string>
    <string name="option_more_than_10_days">More than 10 days</string>

    <string name="question_number_7">7.</string>
    <string name="question_cough">Do you experience coughing symptoms?</string>

    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <string name="question_number_8">8.</string>
    <string name="question_other_symptoms">Do you experience any other symptoms not mentioned in the previous questions?</string>

    <string name="your_answer">Your Answer</string>
    <string name="hint_other_symptoms">Write other symptoms here...</string>

    <string name="submit">Submit</string>
    <string name="result_title">Check Up Completed\nReport submitted and saved</string>
    <string name="result_subtitle">Check-up list completed, report has been sent for analysis and safely stored.\n\nPlease wait while you will be redirected!</string>

    <!-- Map Activity -->
    <string name="btn_open_map">Open Map</string>
    <string name="location_not_available">Location not available</string>
    <string name="location_failed">Failed to get location</string>
    <string name="map_fallback_browser">Fallback to browser because Maps was not recognized as a package</string>
    <string name="location_got">Location acquired: %1$s, %2$s</string>
    <string name="location_null">Location is NULL</string>
    <string name="hospital_fetch_failed">Failed to fetch hospitals: %1$s</string>
    <string name="hospital_unnamed">Unnamed Hospital</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>