<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- NEXT BUTTON -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext2"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:background="@drawable/shape_teal_card"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/next_page"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- HEADER -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginBottom="16dp">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:elevation="8dp"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/bg_circle_back"
                    android:src="@drawable/ic_back_arrow"
                    android:scaleType="center"
                    android:contentDescription="@string/back_button" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/vector__8_" />

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:translationY="28dp"
                    android:translationX="40dp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="true"
                    android:src="@drawable/group" />

            </FrameLayout>

            <!-- Question -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="17dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_number_7"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/teal"
                    android:layout_marginRight="4dp" />

                <TextView
                    android:id="@+id/textQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_cough"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/teal"
                    android:lineSpacingExtra="2dp" />
            </LinearLayout>

            <!-- Answer Options -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="35dp"
                android:gravity="start"
                android:paddingHorizontal="45dp">

                <!-- Option 1 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginVertical="7dp">

                    <RadioButton
                        android:id="@+id/r1"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/likert_circle"
                        android:button="@null"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_yes"
                        android:layout_marginStart="12dp"
                        android:textSize="17sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/montserrat_medium" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <!-- Option 2 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginVertical="7dp">

                    <RadioButton
                        android:id="@+id/r2"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/likert_circle"
                        android:button="@null"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_no"
                        android:layout_marginStart="12dp"
                        android:textSize="17sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/montserrat_medium" />
                </LinearLayout>
            </RadioGroup>

            <!-- Spacer -->
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>
    </ScrollView>

    <!-- PREVIOUS BUTTON -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPrevious"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:text="@string/previous_page"
        android:layout_gravity="bottom|start"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="15sp"
        android:background="@drawable/shape_teal_card" />
</FrameLayout>
